--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "email": "email dev"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@planetscale/database": "^1.11.0",
     "@prisma/adapter-planetscale": "^5.6.0",
     "@prisma/client": "^5.6.0",
+    "@react-email/components": "0.0.14",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
@@ -25,8 +27,11 @@
     "@trpc/server": "^10.43.6",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "2.0.0",
+    "resend": "^3.1.0",
     "superjson": "^2.2.1",
     "zod": "^3.22.4"
   },
