--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@planetscale/database": "^1.11.0",
     "@prisma/adapter-planetscale": "^5.6.0",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-email/components": "0.0.14",
     "@svgr/webpack": "^8.1.0",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -27,6 +28,11 @@
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
+    "lucide-react": "^0.341.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.9",
@@ -35,6 +41,8 @@
     "react-email": "2.0.0",
     "resend": "^3.1.0",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
