--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@planetscale/database": "^1.11.0",
     "@prisma/adapter-planetscale": "^5.6.0",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.14",
@@ -31,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.341.0",
