installed uploadthing and added create organization page

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@uploadthing/react": "^6.4.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -57,6 +58,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.6.0",
     "usehooks-ts": "^3.0.1",
     "zod": "^3.22.4"
   },
