--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.6.0",
     "usehooks-ts": "^3.0.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "autoprefixer": "^10.4.14",
