--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "uploadthing": "^6.6.0",
     "usehooks-ts": "^3.0.1",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
