--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
+    "react-easy-sort": "^1.6.0",
     "react-email": "2.0.0",
     "react-hook-form": "^7.51.0",
     "react-phone-number-input": "^3.3.9",
